--- a/src/App.css
+++ b/src/App.css
@@ -110,15 +110,136 @@
   height: auto;
 }
 
+/* ----------------------------- */
+
+/* START Profile styles */
+.profile-container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 40px;
+}
+
+.profile-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  overflow: auto;
+  padding-bottom: 20px; /* Separación de la barra de scroll */
+}
+
+/* START Profile barra scroll imágenes */
+.profile-grid-container::-webkit-scrollbar {  
+  height: 12px; /* Altura de la barra de desplazamiento */
+}
+
+.profile-grid-container::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+}
+/* END Profile barra scroll imágenes */
+
+.profile-grid-item {
+  position: relative;
+  border: 1px solid #ccc;
+  width: 400px;
+  height: 400px;
+  overflow: hidden;  
+  text-align: center;
+}
+
+.profile-grid-item p {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 10px;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.profile-grid-item img {
+  max-width: 100%;
+  height: 100%;  
+  object-fit: cover;
+}
+
+/* TODO: Ver si cambiar estilos modal*/
+/* START Profile Modal Images */
+.modal {  
+  position: fixed; /* Se mantiene fijo en la ventana */
+  z-index: 1; /* Por encima de todo */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
+}
+
+/* Contenido del modal */
+.modal-content {  
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+#dark .modal-content {
+  background-color: #555;
+}
+
+#light .modal-content {
+  background-color: #fefefe;
+}
+
+/* Imagen dentro del modal */
+.modal-content img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Botón para cerrar el modal */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+/* END Profile Modal Images */
+/* END Profile styles */
+
 @media screen and (min-width: 1200px) {
   .result-item {
     width: calc(25% - 10px); /* Ajusta el ancho deseado para pantallas grandes */
+  }  
+}
+
+/* Media para imágenes Profile */
+@media (max-width: 1100px) {
+  .profile-grid-container {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (max-width: 768px) {
   .result-item {
     width: 100%;
+  }
+  .profile-grid-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .profile-grid-item {
+    width: 665px;
+    height: 665px;
   }
 }
 
