--- a/src/App.css
+++ b/src/App.css
@@ -263,6 +263,38 @@
   box-sizing: border-box;
 }
 
+.profile-grid-item .third-button {
+  position: absolute;
+  bottom: 0;
+  right: 139px;
+  padding: 5px;
+  margin-right: 5px;
+  margin-bottom: 3px;
+  box-sizing: border-box;
+}
+
+.profile-grid-item .second-button span{
+  bottom: 0;
+  right: 70px;
+  margin-right: 5px;
+  margin-bottom: 23px;
+  height: 1px;
+  display: inline-block;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+.profile-grid-item .third-button span{
+  bottom: 0;
+  right: 139px;
+  margin-right: 5px;
+  margin-bottom: 23px;
+  height: 1px;
+  display: inline-block;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
 .profile-grid-item img {
   max-width: 100%;
   height: 100%;
