--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@
   background-color: #FFF;
 }
 
-#light .newsContainer {
-  background-color: #d8d8d8;
+.app-bar-placeholder {
+  height: 80px;
 }
 
 /* START Label de TextField Buscador */
