--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
+@keyframes gradientBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+/* TODO: Ver si dejar esos colores para el degradado animado o cambiar */
+#light {
+  /* background-color: #FFF; */
+  background: linear-gradient(270deg, #ff7e5f, #feb47b, #86a8e7, #7f7fd5);
+  background-size: 800% 800%;
+  animation: gradientBackground 15s ease infinite;
+}
+
+#dark {
+  /* background-color: #3f3f3f; */
+  background: linear-gradient(270deg, #0f2027, #203a43, #2c5364, #243b55);
+  background-size: 800% 800%;
+  animation: gradientBackground 15s ease infinite;
+  color: #FFF;
+}
+
 .App {
   text-align: center;
   min-width: auto;
@@ -14,15 +42,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-#light {
-  background-color: #FFF;
-}
-
-#dark {
-  background-color: #3f3f3f;
-  color: #FFF;
 }
 
 #light .register {
