--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   }
 }
 
-/* TODO: Ver si dejar esos colores para el degradado animado o cambiar */
+/* Colores para el degradado animado */
 #light {
   /* background-color: #FFF; */
   background: linear-gradient(270deg, #ff7e5f, #feb47b, #86a8e7, #7f7fd5);
@@ -320,7 +320,6 @@
   cursor: pointer;
 }
 
-/* TODO: Ver si cambiar estilos modal*/
 /* START Profile Modal Images */
 .modal {
   position: fixed;
